Adding a Kaggle link for Case 3, CS-HTA

--- a/Cognitive_Systems_for_Health_Technology_Applications/Case_3-Drug_Reviews.ipynb
+++ b/Cognitive_Systems_for_Health_Technology_Applications/Case_3-Drug_Reviews.ipynb
@@ -25,6 +25,8 @@
     "\n",
     "The goal was to design a model for **drug rating prediction based on its review** in the [UCI Drug Review dataset](https://archive.ics.uci.edu/ml/datasets/Drug+Review+Dataset+%28Drugs.com%29).\n",
     "\n",
+    "[View this notebook in Kaggle](https://www.kaggle.com/avatust/predicting-drug-ratings)\n",
+    "\n",
     "### Brief overview of the results\n",
     "The model was trained to predict original labels from reviews,\n",
     "both using a discrete classifier and a single variable regression.\n",
@@ -2335,7 +2337,8 @@
    "cell_type": "code",
    "execution_count": 27,
    "metadata": {
-    "_uuid": "bdef422dbe24af8d54074b01ee11999503cb868a"
+    "_uuid": "bdef422dbe24af8d54074b01ee11999503cb868a",
+    "scrolled": false
    },
    "outputs": [
     {
